--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,6 @@
 
     </div>
     <button type="button" class="load-more not__visable">Load more</button>
-    <script src="js/index.js"></script>
+    <script type="module" src="js/index.js"></script>
   </body>
 </html>
